--- a/HomeTask5/StudyManager.DataAccess.ADO/StudyManager.DataAccess.ADO.csproj
+++ b/HomeTask5/StudyManager.DataAccess.ADO/StudyManager.DataAccess.ADO.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
@@ -10,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudyManager.DataAccess.ADO\StudyManager.DataAccess.ADO.csproj" />
+    <ProjectReference Include="..\StudyManager.Models\StudyManager.Models.csproj" />
   </ItemGroup>
 
 </Project>
