--- a/HomeTask7/StudyManager.DataAccess.ADO/StudyManager.DataAccess.ADO.csproj
+++ b/HomeTask7/StudyManager.DataAccess.ADO/StudyManager.DataAccess.ADO.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Repository.cs~RFb956f747.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
