Get page restructure a bit and add page almost complete

--- a/HomeTask8/HomeTask8/HomeTask8.csproj
+++ b/HomeTask8/HomeTask8/HomeTask8.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StudyManager.DataAccess.ADO\StudyManager.DataAccess.ADO.csproj" />
+    <ProjectReference Include="C:\Users\ilyabelyaev\source\repos\.NET_Sigma_Software\HomeTask8\StudyManager.Models\StudyManager.Models.csproj" />
   </ItemGroup>
 
 </Project>
