--- a/HomeTask8/StudyManager.DataAccess.ADO/StudyManager.DataAccess.ADO.csproj
+++ b/HomeTask8/StudyManager.DataAccess.ADO/StudyManager.DataAccess.ADO.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudyManager.Models\StudyManager.Models.csproj" />
+    <ProjectReference Include="C:\Users\ilyabelyaev\source\repos\.NET_Sigma_Software\HomeTask8\StudyManager.Models\StudyManager.Models.csproj" />
   </ItemGroup>
 
 </Project>
