--- a/HomeTask8/HomeTask8/HomeTask8.csproj
+++ b/HomeTask8/HomeTask8/HomeTask8.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.12.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StudyManager.DataAccess.ADO\StudyManager.DataAccess.ADO.csproj" />
     <ProjectReference Include="C:\Users\ilyabelyaev\source\repos\.NET_Sigma_Software\HomeTask8\StudyManager.Models\StudyManager.Models.csproj" />
   </ItemGroup>
