--- a/HomeTask9/StudyManagerWebApi/StudyManagerWebApi/StudyManagerWebApi.csproj
+++ b/HomeTask9/StudyManagerWebApi/StudyManagerWebApi/StudyManagerWebApi.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.12.16" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StudyManager.DataAccess.ADO\StudyManager.DataAccess.ADO.csproj" />
     <ProjectReference Include="..\StudyManager.Models\StudyManager.Models.csproj" />
   </ItemGroup>
